Do not use the invariant keyword on gl_Position

This temporarily reverts aaee34ae3538e75801c0a369943d0c841cc65074 because of the Mesa bug #100316, see https://bugs.freedesktop.org/show_bug.cgi?id=100316